{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 190,
  "lineage": "2f22a2ac-9111-830c-ce5e-56c20653d085",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "splk_hf_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:382610561805:instance/i-08fc10254a0b0ee9d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08fc10254a0b0ee9d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "splk-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0619e634315975a37",
            "private_dns": "ip-192-0-1-65.ec2.internal",
            "private_ip": "192.0.1.65",
            "public_dns": "ec2-18-208-202-48.compute-1.amazonaws.com",
            "public_ip": "18.208.202.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-036eee2e2e46b17e8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8907e112e4efabc",
            "tags": {
              "Name": "splk-hf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b764ef57ea0ef2f8"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.splk-key",
            "aws_main_route_table_association.splk-default-rt",
            "aws_route_table.internet_route",
            "aws_security_group.lb-sg",
            "aws_security_group.splk-sg",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_splk",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:382610561805:instance/i-019d9bfb22f5e1d43",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019d9bfb22f5e1d43",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "splk-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9039b633583d67c",
            "private_dns": "ip-192-0-1-109.ec2.internal",
            "private_ip": "192.0.1.109",
            "public_dns": "ec2-3-235-58-96.compute-1.amazonaws.com",
            "public_ip": "3.235.58.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05f9cfdb7fc5be920",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8907e112e4efabc",
            "tags": {
              "Name": "splk-hf_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b764ef57ea0ef2f8"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.splk-key",
            "aws_main_route_table_association.splk-default-rt",
            "aws_route_table.internet_route",
            "aws_security_group.lb-sg",
            "aws_security_group.splk-sg",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_splk",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "splk_hf_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:382610561805:instance/i-034139fee0d26222c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034139fee0d26222c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "splk-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a13496511124e668",
            "private_dns": "ip-192-0-2-98.ec2.internal",
            "private_ip": "192.0.2.98",
            "public_dns": "ec2-3-95-159-137.compute-1.amazonaws.com",
            "public_ip": "3.95.159.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef2700ca0e4edb39",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041d9cdf32c2435c8",
            "tags": {
              "Name": "splk-hf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b764ef57ea0ef2f8"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.splk-key",
            "aws_main_route_table_association.splk-default-rt",
            "aws_route_table.internet_route",
            "aws_security_group.lb-sg",
            "aws_security_group.splk-sg",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_splk",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:382610561805:instance/i-0ab6aad6a83a4ce7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab6aad6a83a4ce7f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "splk-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089ddb2ecb79553c0",
            "private_dns": "ip-192-0-2-75.ec2.internal",
            "private_ip": "192.0.2.75",
            "public_dns": "ec2-184-72-213-159.compute-1.amazonaws.com",
            "public_ip": "184.72.213.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-089d430240921b301",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041d9cdf32c2435c8",
            "tags": {
              "Name": "splk-hf_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b764ef57ea0ef2f8"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.splk-key",
            "aws_main_route_table_association.splk-default-rt",
            "aws_route_table.internet_route",
            "aws_security_group.lb-sg",
            "aws_security_group.splk-sg",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_splk",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382610561805:internet-gateway/igw-0db5cecd0d95a0af4",
            "id": "igw-0db5cecd0d95a0af4",
            "owner_id": "382610561805",
            "vpc_id": "vpc-08e00800321b5badf"
          },
          "dependencies": [
            "aws_vpc.vpc_splk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "splk-default-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078f9797c5436823d",
            "original_route_table_id": "rtb-0bc6158bfe9c53abd",
            "route_table_id": "rtb-0745d8c03c2989746",
            "vpc_id": "vpc-08e00800321b5badf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_vpc.vpc_splk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0745d8c03c2989746",
            "owner_id": "382610561805",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db5cecd0d95a0af4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Splunk-Infra-RT"
            },
            "vpc_id": "vpc-08e00800321b5badf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_splk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382610561805:security-group/sg-01a334037e957b618",
            "description": "Allow 443 and traffic to Splunk SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a334037e957b618",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "382610561805",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08e00800321b5badf"
          },
          "dependencies": [
            "aws_vpc.vpc_splk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "splk-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382610561805:security-group/sg-0b764ef57ea0ef2f8",
            "description": "Allow TCP/8000 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b764ef57ea0ef2f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow 8000 from our public IP",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a334037e957b618"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "splk-sg",
            "name_prefix": "",
            "owner_id": "382610561805",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08e00800321b5badf"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.vpc_splk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382610561805:subnet/subnet-0c8907e112e4efabc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.0.1.0/24",
            "id": "subnet-0c8907e112e4efabc",
            "map_public_ip_on_launch": true,
            "owner_id": "382610561805",
            "tags": {
              "Name": "subnet-az-a"
            },
            "vpc_id": "vpc-08e00800321b5badf"
          },
          "dependencies": [
            "aws_vpc.vpc_splk",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382610561805:subnet/subnet-041d9cdf32c2435c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.0.2.0/24",
            "id": "subnet-041d9cdf32c2435c8",
            "map_public_ip_on_launch": true,
            "owner_id": "382610561805",
            "tags": {
              "Name": "subnet-az-b"
            },
            "vpc_id": "vpc-08e00800321b5badf"
          },
          "dependencies": [
            "aws_vpc.vpc_splk",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_splk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382610561805:vpc/vpc-08e00800321b5badf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0b608c2eebdc47f2c",
            "default_route_table_id": "rtb-0bc6158bfe9c53abd",
            "default_security_group_id": "sg-076c001b8fcf02f02",
            "dhcp_options_id": "dopt-02ca75142a94fb83f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08e00800321b5badf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bc6158bfe9c53abd",
            "owner_id": "382610561805",
            "tags": {
              "Name": "splunk-infra-vpc-us-east1"
            }
          }
        }
      ]
    }
  ]
}